--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI = mongodb+srv://mohit:Mohit9026@cluster0.0avsqiz.mongodb.net/Tracker
+MONGO_URI = mongodb+srv://(username):(password)@cluster0.0avsqiz.mongodb.net/Tracker
